# C-Game-AAAAA

./: .gitignore  CMakeLists.txt  README.MD  requirements.txt
docs/: README.md
libs/locals/liblog/: CMakeLists.txt  log.c
libs/single_header/cr/: cr.h
libs/single_header/cute/: cute_aseprite.h  cute_font.h  cute_png.h  cute_sound.h  cute_spritebatch.h  cute_sync.h  cute_tiled.h  cute_utf.h
libs/single_header/hypathia/: hypathia.h
src/: main.c
